<resources>
    <string name="app_name">Hands on Pizza</string>
    <string name="pizza">Pizza</string>
    <string name="clientes">Clientes</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listar_pizza">Listar Pizza</string>
    <string name="gerenciar_pizza">Gerenciar Pizza</string>
    <string name="listar">Listar</string>
    <string name="editar">Editar</string>
    <string name="nome">Nome</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="tempo_para_preparo">Tempo para preparo</string>
    <string name="voltar">Voltar</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="adicionar">Adicionar</string>
    <string name="listar_clientes">Listar Clientes</string>
    <string name="gerenciar_clientes">Gerenciar Clientes</string>
    <string name="endereco">Endereço</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="gerenciar_fornecedores">Gerenciar Fornecedores</string>
    <string name="listar_fornecedores">Listar Fornecedores</string>
    <string name="cnpj">CNPJ</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="deseja_excluir_pizza">Deseja excluir a Pizza?</string>
    <string name="cep">Cep</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
</resources>
